# campus_budget_app

./: .env.example  .gitignore  README.md  build_web.ps1  pubspec.yaml  run_web.ps1
android/app/: build.gradle.kts
aws/: README.md  deploy.ps1  samconfig.toml  set_gemini_key.ps1  template.yaml
aws/lambda/src/: app.py
aws/lambda/tests/: test_app.py
backend/: CMakeLists.txt  README.md
backend/data/: .gitkeep
backend/include/campus/: BudgetManager.hpp  Expense.hpp  LedgerEntry.hpp  LedgerManager.hpp  Piggybank.hpp  PiggybankManager.hpp  ReportGenerator.hpp
backend/server/: main.cpp
backend/src/: BudgetManager.cpp  Expense.cpp  LedgerEntry.cpp  LedgerManager.cpp  Piggybank.cpp  PiggybankManager.cpp  ReportGenerator.cpp
backend/tests/: backend_tests.cpp
docs/superpowers/plans/: 2026-06-30-cpp-backend.md
docs/superpowers/specs/: 2026-06-30-cpp-backend-design.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/constants/: app_colors.dart
lib/core/theme/: app_theme.dart
lib/data/: demo_data.dart
lib/models/: ai_insight.dart  category_budget.dart  expense.dart  income_entry.dart  ledger.dart  piggybank.dart
lib/screens/ai_advisor/: ai_advisor_screen.dart
lib/screens/categories/: categories_screen.dart
lib/services/: ai_service.dart  api_service.dart  aws_auth_service.dart  aws_budget_api.dart  aws_config.dart  aws_expense_store.dart  aws_session_store.dart  aws_session_store_stub.dart  aws_session_store_web.dart  backend_expense_store.dart  expense_service.dart  expense_store.dart  expense_store_factory.dart  expense_store_factory_stub.dart  expense_store_factory_web.dart
lib/widgets/: add_expense_dialog.dart  ai_advisor_panel.dart  app_shell.dart  expense_table.dart  money_dialogs.dart  placeholder_screen.dart  sidebar_nav.dart  stat_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: ai_service_test.dart  aws_auth_service_test.dart  expense_service_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
